
leachbj - Thu October 7 2004
	merged play/pause and timer patch from Prashant

leachbj - Fri October 1 2004
	merged wav record/playback patch from Prashant

leachbj - Sat Septemper  4 2004
	merged Nimesweeper port from matthis

courtc - Sun July 11 2004
	added pong game

leachbj - Mon Jun 28 2004
	fixed crash in textview when a line contains only tabs

matz-josh - Sun July 27 2004
	fixed crash on dos/windows textfiles containing empty lines
	the handle on the scrollbar is now at least 2 Pixels high 
	  it has been sometimes invisible (hight 0) in large files
	added support for rewind and forward keys:
	  rewind scrolls up and forward scrolls down one screen.
	removed flicker, when trying to scroll beyond the last(first) line of text

leachbj - Thu June 17 2004
	Fixed up scroll wheel sensitivity
	Cleaned up some menu names
	Sliders now display heading correctly
	Added BlueCube (tetris clone) port from Matthis
	
leachbj - Sun June 06 2004
	In browser, execute .sh files as shell scripts
	Removed un-implemented menus to avoid confusion

Courtney Cavin - Fri June 4, 2004
	Cursor no longer erases edges of previosly selected pieces
	Score now shows at end along with the degrading comment.
	Computer player now likes edges and loves corners..
	Cursor only moves to valid moves

leachbj - Mon May 24 2004
	Fixed partial read/write bug
	Playback window now plays the file requested
	Tweaked record/playback buffer sizes

leachbj - Sun May 23 2004
	Added simple voice recording via microphone
	Added .raw file playback (44.1kHz only)

Courtney Cavin - Fri May 21, 2004
        Added Othello game

leachbj - Sat May 8 2004
	Merged Matthew's changes in
	Fixed backlight timer to work with GR_EVENT_TYPE_TIMEOUT
	Fixed reboot.

Matthew J. Sahagian - Sat Apr 10, 2004
	Added Backlight timer support for turning backlight off
	Support for turning backlight on at keypress
	Simplified event handling

Matthew J. Sahagian - Fri Apr 9, 2004